--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+    
 }
 
 .main {
@@ -35,13 +36,39 @@ li {
     line-height: 20px;
 }
 
-.box-one {
-    width: 75px;
-    height: 75px;
-    background-color: #b8cd59;
-    margin-top: 50px;
-    margin-left: -47.5px;
-    border: 15px solid #6b7a2a;
+.list-one {
+    line-height: 30px;
+}
 
+.parent-container {
+    margin: 0px;
+    padding: 30px;
+    justify-self: center;
+    align-self: center;
+
+    
+    background-color: #F7EEBB;
+    height: 600px;
+    width: 600px;
+
+    gap: 10px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+}
+
+.parent-container div {
+    
+    height: 100px;
+    flex-basis: 100px;
+    background-color: #b8cd59;
+    border: 5px solid #6b7a2a;
+    border-radius: 20px;
 
 }
+
+
+
